fix padding on mobile on right

--- a/assets/_sass/styles.scss
+++ b/assets/_sass/styles.scss
@@ -133,6 +133,7 @@ article {
     article {
         @include span-columns(12);
         padding-left: 5px;
+        padding-right: 10px;
         margin-top: 0px;
     }
 
